# linphone-arm-linux

linphone-sdk/cmake-builder/configs/: config-desktop-raspberry.cmake
linphone-sdk/cmake-builder/toolchains/: toolchain-raspberry.cmake
linphone-sdk/linphone/console/: CMakeLists.txt  CMakeLists.txt.bak
linphone-sdk/linphone/daemon/: CMakeLists.txt
linphone-sdk/mediastreamer2/: CMakeLists.txt
linphone-sdk/mediastreamer2/cmake/: FindALSA.cmake  FindFFMpeg.cmake  FindSpeex.cmake
linphone-sdk/mediastreamer2/include/mediastreamer2/: allfilters.h
linphone-sdk/mediastreamer2/src/: CMakeLists.txt
linphone-sdk/mediastreamer2/src/otherfilters/: t3audiofilter.c
linphone-sdk/mediastreamer2/src/voip/: msvoip.c
